参考redadme: 支持更灵活的响应处理机制 (预设json)
