# example/api/product/app/v1/v1.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.6
-// 	protoc        v5.29.3
+// 	protoc-gen-go v1.36.10
+// 	protoc        v6.33.2
 // source: product/app/v1/v1.proto
 
 package v1
@@ -10,6 +10,7 @@ import (
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
 	reflect "reflect"
 	sync "sync"
 	unsafe "unsafe"
@@ -207,11 +208,101 @@ func (x *Article) GetAuthorId() int32 {
 	return 0
 }
 
+type DownloadArticleReq struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// @inject_tag: uri:"article_id"
+	ArticleId     int32 `protobuf:"varint,1,opt,name=article_id,json=articleId,proto3" json:"article_id,omitempty" uri:"article_id"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DownloadArticleReq) Reset() {
+	*x = DownloadArticleReq{}
+	mi := &file_product_app_v1_v1_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DownloadArticleReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DownloadArticleReq) ProtoMessage() {}
+
+func (x *DownloadArticleReq) ProtoReflect() protoreflect.Message {
+	mi := &file_product_app_v1_v1_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DownloadArticleReq.ProtoReflect.Descriptor instead.
+func (*DownloadArticleReq) Descriptor() ([]byte, []int) {
+	return file_product_app_v1_v1_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *DownloadArticleReq) GetArticleId() int32 {
+	if x != nil {
+		return x.ArticleId
+	}
+	return 0
+}
+
+type GetArticleXMLReq struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// @inject_tag: uri:"article_id"
+	ArticleId     int32 `protobuf:"varint,1,opt,name=article_id,json=articleId,proto3" json:"article_id,omitempty" uri:"article_id"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetArticleXMLReq) Reset() {
+	*x = GetArticleXMLReq{}
+	mi := &file_product_app_v1_v1_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetArticleXMLReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetArticleXMLReq) ProtoMessage() {}
+
+func (x *GetArticleXMLReq) ProtoReflect() protoreflect.Message {
+	mi := &file_product_app_v1_v1_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetArticleXMLReq.ProtoReflect.Descriptor instead.
+func (*GetArticleXMLReq) Descriptor() ([]byte, []int) {
+	return file_product_app_v1_v1_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetArticleXMLReq) GetArticleId() int32 {
+	if x != nil {
+		return x.ArticleId
+	}
+	return 0
+}
+
 var File_product_app_v1_v1_proto protoreflect.FileDescriptor
 
 const file_product_app_v1_v1_proto_rawDesc = "" +
 	"\n" +
-	"\x17product/app/v1/v1.proto\x12\x0eproduct.app.v1\x1a\x1cgoogle/api/annotations.proto\"t\n" +
+	"\x17product/app/v1/v1.proto\x12\x0eproduct.app.v1\x1a\x1cgoogle/api/annotations.proto\x1a\x1bgoogle/protobuf/empty.proto\"t\n" +
 	"\x0eGetArticlesReq\x12\x14\n" +
 	"\x05title\x18\x01 \x01(\tR\x05title\x12\x12\n" +
 	"\x04page\x18\x02 \x01(\x05R\x04page\x12\x1b\n" +
@@ -223,10 +314,18 @@ const file_product_app_v1_v1_proto_rawDesc = "" +
 	"\aArticle\x12\x14\n" +
 	"\x05title\x18\x01 \x01(\tR\x05title\x12\x18\n" +
 	"\acontent\x18\x02 \x01(\tR\acontent\x12\x1b\n" +
-	"\tauthor_id\x18\x03 \x01(\x05R\bauthorId2\x83\x02\n" +
+	"\tauthor_id\x18\x03 \x01(\x05R\bauthorId\"3\n" +
+	"\x12DownloadArticleReq\x12\x1d\n" +
+	"\n" +
+	"article_id\x18\x01 \x01(\x05R\tarticleId\"1\n" +
+	"\x10GetArticleXMLReq\x12\x1d\n" +
+	"\n" +
+	"article_id\x18\x01 \x01(\x05R\tarticleId2\xf0\x03\n" +
 	"\vBlogService\x12\x87\x01\n" +
 	"\vGetArticles\x12\x1e.product.app.v1.GetArticlesReq\x1a\x1f.product.app.v1.GetArticlesResp\"7\x82\xd3\xe4\x93\x021Z!\x12\x1f/v1/author/{author_id}/articles\x12\f/v1/articles\x12j\n" +
-	"\rCreateArticle\x12\x17.product.app.v1.Article\x1a\x17.product.app.v1.Article\"'\x82\xd3\xe4\x93\x02!\"\x1f/v1/author/{author_id}/articlesBCZAgithub.com/mohuishou/protoc-gen-go-gin/example/api/product/app/v1b\x06proto3"
+	"\rCreateArticle\x12\x17.product.app.v1.Article\x1a\x17.product.app.v1.Article\"'\x82\xd3\xe4\x93\x02!\"\x1f/v1/author/{author_id}/articles\x12y\n" +
+	"\x0fDownloadArticle\x12\".product.app.v1.DownloadArticleReq\x1a\x16.google.protobuf.Empty\"*\x82\xd3\xe4\x93\x02$\x12\"/v1/articles/{article_id}/download\x12p\n" +
+	"\rGetArticleXML\x12 .product.app.v1.GetArticleXMLReq\x1a\x16.google.protobuf.Empty\"%\x82\xd3\xe4\x93\x02\x1f\x12\x1d/v1/articles/{article_id}/xmlBCZAgithub.com/mohuishou/protoc-gen-go-gin/example/api/product/app/v1b\x06proto3"
 
 var (
 	file_product_app_v1_v1_proto_rawDescOnce sync.Once
@@ -240,20 +339,27 @@ func file_product_app_v1_v1_proto_rawDescGZIP() []byte {
 	return file_product_app_v1_v1_proto_rawDescData
 }
 
-var file_product_app_v1_v1_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_product_app_v1_v1_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_product_app_v1_v1_proto_goTypes = []any{
-	(*GetArticlesReq)(nil),  // 0: product.app.v1.GetArticlesReq
-	(*GetArticlesResp)(nil), // 1: product.app.v1.GetArticlesResp
-	(*Article)(nil),         // 2: product.app.v1.Article
+	(*GetArticlesReq)(nil),     // 0: product.app.v1.GetArticlesReq
+	(*GetArticlesResp)(nil),    // 1: product.app.v1.GetArticlesResp
+	(*Article)(nil),            // 2: product.app.v1.Article
+	(*DownloadArticleReq)(nil), // 3: product.app.v1.DownloadArticleReq
+	(*GetArticleXMLReq)(nil),   // 4: product.app.v1.GetArticleXMLReq
+	(*emptypb.Empty)(nil),      // 5: google.protobuf.Empty
 }
 var file_product_app_v1_v1_proto_depIdxs = []int32{
 	2, // 0: product.app.v1.GetArticlesResp.articles:type_name -> product.app.v1.Article
 	0, // 1: product.app.v1.BlogService.GetArticles:input_type -> product.app.v1.GetArticlesReq
 	2, // 2: product.app.v1.BlogService.CreateArticle:input_type -> product.app.v1.Article
-	1, // 3: product.app.v1.BlogService.GetArticles:output_type -> product.app.v1.GetArticlesResp
-	2, // 4: product.app.v1.BlogService.CreateArticle:output_type -> product.app.v1.Article
-	3, // [3:5] is the sub-list for method output_type
-	1, // [1:3] is the sub-list for method input_type
+	3, // 3: product.app.v1.BlogService.DownloadArticle:input_type -> product.app.v1.DownloadArticleReq
+	4, // 4: product.app.v1.BlogService.GetArticleXML:input_type -> product.app.v1.GetArticleXMLReq
+	1, // 5: product.app.v1.BlogService.GetArticles:output_type -> product.app.v1.GetArticlesResp
+	2, // 6: product.app.v1.BlogService.CreateArticle:output_type -> product.app.v1.Article
+	5, // 7: product.app.v1.BlogService.DownloadArticle:output_type -> google.protobuf.Empty
+	5, // 8: product.app.v1.BlogService.GetArticleXML:output_type -> google.protobuf.Empty
+	5, // [5:9] is the sub-list for method output_type
+	1, // [1:5] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
 	1, // [1:1] is the sub-list for extension extendee
 	0, // [0:1] is the sub-list for field type_name
@@ -270,7 +376,7 @@ func file_product_app_v1_v1_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_product_app_v1_v1_proto_rawDesc), len(file_product_app_v1_v1_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   5,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
